Refacttor mon_stack_wrapper role, changed groups['master'][0] -> hostvars[groups['master'][0]].ansible_host due to inventory refactor

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -74,6 +74,7 @@ all:
       hosts:
         mon_stack_host:
           ansible_host: localhost
+          ansible_connection: local
 
     cleanup:
       hosts:
